src/test/ui/parser/issue-20711-2.stderr
error: expected one of `async`, `const`, `crate`, `default`, `extern`, `fn`, `pub`, `super`, `type`, or `unsafe`, found `}`
  --> $DIR/issue-20711-2.rs:7:1
   |
LL |     #[stable(feature = "rust1", since = "1.0.0")]
   |                                                  - expected one of 10 possible tokens
LL | }
   | ^ unexpected token

error: aborting due to previous error

